CMAKE_MINIMUM_REQUIRED(VERSION 3.3 FATAL_ERROR)

PROJECT(VTK2OBJ CXX)

# Set output path
SET(EXECUTABLE_OUTPUT_PATH ${VTK2OBJ_BINARY_DIR}/bin CACHE PATH
  "Output directory for building executable.")

# Find VTK
FIND_PACKAGE(VTK NO_MODULE)
MESSAGE(STATUS "VTK Version: ${VTK_VERSION}")

# Set execuable
ADD_EXECUTABLE(vtk2obj src/main.cpp)

# Set C++ standard and link VTK libraries
SET_PROPERTY(TARGET vtk2obj PROPERTY CXX_STANDARD 14)
TARGET_LINK_LIBRARIES(vtk2obj PRIVATE ${VTK_LIBRARIES})
VTK_MODULE_AUTOINIT(
  TARGETS vtk2obj
  MODULES ${VTK_LIBRARIES}
)
